--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Portal 0.5</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./dist/main.js"></script>
+  </body>
 </html>
