fix export issue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Home - Portal 0.5</title>
   </head>
   <body>
+    <script>
+      let exports = {};
+    </script>
     <script src="./dist/main.js"></script>
   </body>
 </html>
