--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   name="search"
                   type="image"
                   style="border: 0; margin: 0 0 -9px 5px"
-                  src="style/search.png"
+                  src="assets/search.png"
                   alt="Search"
                   title="Search"
                 />
@@ -116,8 +116,8 @@
         </p>
         <p>
           This template is a fully functional 5 page website, with an
-          <a href="examples.html">examples</a> page that gives examples of all
-          the styles available with this design.
+          <a href="pages/examples.html">examples</a> page that gives examples of
+          all the styles available with this design.
         </p>
         <h2>Browser Compatibility</h2>
         <p>This template has been tested in the following browsers:</p>
@@ -131,10 +131,11 @@
     <div id="content_footer"></div>
     <div id="footer">
       <p>
-        <a href="index.html">Home</a> | <a href="examples.html">Examples</a> |
-        <a href="page.html">A Page</a> |
-        <a href="another_page.html">Another Page</a> |
-        <a href="contact.html">Contact Us</a>
+        <a href="index.html">Home</a> |
+        <a href="pages/examples.html">Examples</a> |
+        <a href="pages/page.html">A Page</a> |
+        <a href="pages/another_page.html">Another Page</a> |
+        <a href="pages/contact.html">Contact Us</a>
       </p>
       <p>
         Copyright &copy; simplestyle_blue_trees |
