--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
         <div id="logo_text">
           <!-- class="logo_colour", allows you to change the colour of the text -->
           <h1>
-            <a href="index.html"
-              >simple<span class="logo_colour">style_blue_trees</span></a
-            >
+            <a href="index.html">Portal<span class="logo_colour">0.5</span></a>
           </h1>
-          <h2>Simple. Contemporary. Website Template.</h2>
+          <h2>Official Portal 0.5 Website.</h2>
         </div>
       </div>
       <div id="menubar">
         <ul id="menu">
           <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
           <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="examples.html">Examples</a></li>
-          <li><a href="page.html">A Page</a></li>
-          <li><a href="another_page.html">Another Page</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="pages/examples.html">Examples</a></li>
+          <li><a href="pages/page.html">A Page</a></li>
+          <li><a href="pages/another_page.html">Another Page</a></li>
+          <li><a href="pages/contact.html">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -43,13 +41,10 @@
           <div class="sidebar_top"></div>
           <div class="sidebar_item">
             <!-- insert your sidebar items here -->
-            <h3>Latest News</h3>
-            <h4>New Website Launched</h4>
-            <h5>February 1st, 2014</h5>
-            <p>
-              2014 sees the redesign of our website. Take a look around and let
-              us know what you think.<br /><a href="#">Read more</a>
-            </p>
+            <h3>Latest Updates</h3>
+            <h4>1.0.1</h4>
+            <h5>August 21st, 2024</h5>
+            <p>Bugfix & Settings Update.<br /><a href="#">Read more</a></p>
           </div>
           <div class="sidebar_base"></div>
         </div>
@@ -94,37 +89,21 @@
       </div>
       <div id="content">
         <!-- insert the page content here -->
-        <h1>Welcome to the simplestyle_blue_trees template</h1>
+        <h1>
+          Welcome to Portal 0.5, the Portal 2 rip-off we've all been waiting
+          for!
+        </h1>
         <p>
-          This standards compliant, simple, fixed width website template is
-          released as an 'open source' design (under a
-          <a href="http://creativecommons.org/licenses/by/3.0"
-            >Creative Commons Attribution 3.0 Licence</a
-          >), which means that you are free to download and use it for anything
-          you want (including modifying and amending it). All I ask is that you
-          leave the 'design from HTML5webtemplates.co.uk' link in the footer of
-          the template, but other than that...
+          Portal 0.5 is an amazing 2D video game about solving puzzles using
+          portals, based on Portal 2.
         </p>
-        <p>
-          This template is written entirely in <strong>HTML5</strong> and
-          <strong>CSS</strong>, and can be validated using the links in the
-          footer.
-        </p>
-        <p>
-          You can view more free HTML5 web templates
-          <a href="http://www.html5webtemplates.co.uk">here</a>.
-        </p>
-        <p>
-          This template is a fully functional 5 page website, with an
-          <a href="pages/examples.html">examples</a> page that gives examples of
-          all the styles available with this design.
-        </p>
-        <h2>Browser Compatibility</h2>
-        <p>This template has been tested in the following browsers:</p>
+        <h2>Future Content</h2>
+        <p>These features are planned for future updates:</p>
         <ul>
-          <li>Internet Explorer 9</li>
-          <li>FireFox 25</li>
-          <li>Google Chrome 31</li>
+          <li>Fix for invisible mouse glitch</li>
+          <li>New levels</li>
+          <li>Options menu accessible via pause menu</li>
+          <li>Speed is maintained when passing through portals</li>
         </ul>
       </div>
     </div>
@@ -138,9 +117,6 @@
         <a href="pages/contact.html">Contact Us</a>
       </p>
       <p>
-        Copyright &copy; simplestyle_blue_trees |
-        <a href="http://validator.w3.org/check?uri=referer">HTML5</a> |
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
         <a href="http://www.html5webtemplates.co.uk"
           >design from HTML5webtemplates.co.uk</a
         >
