--- a/index.html
+++ b/index.html
@@ -8,120 +8,18 @@
       name="keywords"
       content="portal 0.5, portal 0,5, portal 0.5 official, portal 0,5 official, portal 05, portal 05 official, portal 2D"
     />
-
     <link rel="stylesheet" type="text/css" href="styles/template.css" />
   </head>
+
   <div id="main">
-    <div id="header">
-      <div id="logo">
-        <div id="logo_text">
-          <!-- class="logo_colour", allows you to change the colour of the text -->
-          <h1>
-            <a href="index.html">Portal<span class="logo_colour">0.5</span></a>
-          </h1>
-          <h2>Official Portal 0.5 Website.</h2>
-        </div>
-      </div>
-      <div id="menubar">
-        <ul id="menu">
-          <!-- put class="selected" in the li tag for the selected page - to highlight which page you're on -->
-          <li class="selected"><a href="index.html">Home</a></li>
-          <li><a href="pages/examples.html">Examples</a></li>
-          <li><a href="pages/page.html">A Page</a></li>
-          <li><a href="pages/another_page.html">Another Page</a></li>
-          <li><a href="pages/contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </div>
+    <div id="default-header"></div>
+
     <div id="content_header"></div>
-    <div id="site_content">
-      <div id="banner"></div>
-      <div id="sidebar_container">
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <!-- insert your sidebar items here -->
-            <h3>Latest Updates</h3>
-            <h4>1.0.1</h4>
-            <h5>August 21st, 2024</h5>
-            <p>Bugfix & Settings Update.<br /><a href="#">Read more</a></p>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Useful Links</h3>
-            <ul>
-              <li><a href="#">link 1</a></li>
-              <li><a href="#">link 2</a></li>
-              <li><a href="#">link 3</a></li>
-              <li><a href="#">link 4</a></li>
-            </ul>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-        <div class="sidebar">
-          <div class="sidebar_top"></div>
-          <div class="sidebar_item">
-            <h3>Search</h3>
-            <form method="post" action="#" id="search_form">
-              <p>
-                <input
-                  class="search"
-                  type="text"
-                  name="search_field"
-                  value="Enter keywords....."
-                />
-                <input
-                  name="search"
-                  type="image"
-                  style="border: 0; margin: 0 0 -9px 5px"
-                  src="assets/search.png"
-                  alt="Search"
-                  title="Search"
-                />
-              </p>
-            </form>
-          </div>
-          <div class="sidebar_base"></div>
-        </div>
-      </div>
-      <div id="content">
-        <!-- insert the page content here -->
-        <h1>
-          Welcome to Portal 0.5, the Portal 2 rip-off we've all been waiting
-          for!
-        </h1>
-        <p>
-          Portal 0.5 is an amazing 2D video game about solving puzzles using
-          portals, based on Portal 2.
-        </p>
-        <h2>Future Content</h2>
-        <p>These features are planned for future updates:</p>
-        <ul>
-          <li>Fix for invisible mouse glitch</li>
-          <li>New levels</li>
-          <li>Options menu accessible via pause menu</li>
-          <li>Speed is maintained when passing through portals</li>
-        </ul>
-      </div>
-    </div>
+
+    <div id="default-site-content"></div>
+
     <div id="content_footer"></div>
-    <div id="footer">
-      <p>
-        <a href="index.html">Home</a> |
-        <a href="pages/examples.html">Examples</a> |
-        <a href="pages/page.html">A Page</a> |
-        <a href="pages/another_page.html">Another Page</a> |
-        <a href="pages/contact.html">Contact Us</a>
-      </p>
-      <p>
-        <a href="http://www.html5webtemplates.co.uk"
-          >design from HTML5webtemplates.co.uk</a
-        >
-      </p>
-    </div>
+    <div id="default-footer"></div>
   </div>
   <body>
     <script>
