Multiple Page Support

--- a/index.html
+++ b/index.html
@@ -12,19 +12,32 @@
   </head>
 
   <div id="main">
-    <div id="default-header"></div>
-
+    <div id="default-header">Home</div>
     <div id="content_header"></div>
-
-    <div id="default-site-content"></div>
+    <div id="default-site-content">
+      <!--  -->
+      <h1>
+        Welcome to Portal 0.5, the Portal 2 rip-off we've all been waiting for!
+      </h1>
+      <p>
+        Portal 0.5 is an amazing 2D video game about solving puzzles using
+        portals, based on Portal 2.
+      </p>
+      <h2>Future Content</h2>
+      <p>These features are planned for future updates:</p>
+      <ul>
+        <li>Fix for invisible mouse glitch</li>
+        <li>New levels</li>
+        <li>Options menu accessible via pause menu</li>
+        <li>Speed is maintained when passing through portals</li>
+      </ul>
+      <!--  -->
+    </div>
 
     <div id="content_footer"></div>
     <div id="default-footer"></div>
   </div>
   <body>
-    <script>
-      let exports = {};
-    </script>
-    <script src="./dist/main.js"></script>
+    <script src="./dist/out.js"></script>
   </body>
 </html>
