--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,6 @@
     <div id="default-site-content">
       <!--  -->
       <h1>Contact Us</h1>
-      <p>
-        Below is an example of how a contact form might look with this template:
-      </p>
       <div class="form_settings">
         <p>
           <span>Name</span
@@ -48,10 +45,7 @@
           />
         </p>
       </div>
-      <p>
-        <br /><br />NOTE: A contact form such as this would require some way of
-        emailing the input to an email address.
-      </p>
+      <p><br /><br />NOTE: This contact form is not working.</p>
       <!--  -->
     </div>
 
