--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
           ><input class="contact" type="text" name="your_email" value="" />
         </p>
         <p>
-          a <span>Message</span
+          <span>Message</span
           ><textarea
             class="contact textarea"
             rows="8"
