--- a/leaderboards.html
+++ b/leaderboards.html
@@ -16,6 +16,8 @@
     <div id="content_header"></div>
     <div id="default-site-content">
       <!--  -->
+      <div id="category-info"></div>
+      <h2>Leaderboards</h2>
       <select name="leaderboard-category" id="leaderboard-category">
         <option value="anyPercent">any%</option>
         <option selected="selected" value="backspacePercent">backspace%</option>
