Renaming to Flat Aperture

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Contact - Portal 0.5</title>
+    <title>Contact - Flat Aperture</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="portal 0.5, portal 0,5, portal 0.5 official, portal 0,5 official, portal 05, portal 05 official, portal 2D"
-    />
+    <meta name="keywords" content="Flat Aperture, Flat Aperture official, Flat, Aperture, Portal 2D" />
     <link rel="stylesheet" type="text/css" href="styles/template.css" />
   </head>
 
@@ -18,31 +14,11 @@
       <!--  -->
       <h1>Contact Us</h1>
       <div class="form_settings">
-        <p>
-          <span>Name</span
-          ><input class="contact" type="text" name="your_name" value="" />
-        </p>
-        <p>
-          <span>Email Address</span
-          ><input class="contact" type="text" name="your_email" value="" />
-        </p>
-        <p>
-          <span>Message</span
-          ><textarea
-            class="contact textarea"
-            rows="8"
-            cols="50"
-            name="your_enquiry"
-          ></textarea>
-        </p>
+        <p><span>Name</span><input class="contact" type="text" name="your_name" value="" /></p>
+        <p><span>Email Address</span><input class="contact" type="text" name="your_email" value="" /></p>
+        <p><span>Message</span><textarea class="contact textarea" rows="8" cols="50" name="your_enquiry"></textarea></p>
         <p style="padding-top: 15px">
-          <span>&nbsp;</span
-          ><input
-            class="submit"
-            type="submit"
-            name="contact_submitted"
-            value="submit"
-          />
+          <span>&nbsp;</span><input class="submit" type="submit" name="contact_submitted" value="submit" />
         </p>
       </div>
       <p><br /><br />NOTE: This contact form is not working.</p>
