--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home - Portal 0.5</title>
+    <title>Home - Flat Aperture</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="portal 0.5, portal 0,5, portal 0.5 official, portal 0,5 official, portal 05, portal 05 official, portal 2D"
-    />
+    <meta name="keywords" content="Flat Aperture, Flat Aperture official, Flat, Aperture, Portal 2D" />
     <link rel="stylesheet" type="text/css" href="styles/template.css" />
   </head>
 
@@ -16,13 +13,9 @@
     <div id="content_header"></div>
     <div id="default-site-content">
       <!--  -->
-      <h1>
-        Welcome to Portal 0.5, the Portal 2 rip-off we've all been waiting for!
-      </h1>
-      <p>
-        Portal 0.5 is an amazing 2D video game about solving puzzles using
-        portals, based on Portal 2.
-      </p>
+      <h1>Welcome to Flat Aperture, the Portal 2 rip-off we've all been waiting for!</h1>
+      <p>Flat Aperture is an amazing 2D video game about solving puzzles using portals, based on Portal 2.</p>
+      <p></p>
       <h2>Future Content</h2>
       <p>These features are planned for future updates:</p>
       <ul>
@@ -32,6 +25,39 @@
         <li>Speed is maintained when passing through portals</li>
         <li></li>
       </ul>
+
+      <h1>Flat Aperture: A Glimpse into the Multiverse</h1>
+      <p>
+        In the infinite expanse of the multiverse, there are worlds where science defies the very fabric of reality, creating
+        the impossible and exploring the absurd. Among these myriad worlds lies a curious universe where the laws of physics
+        have taken a two-dimensional turn. Welcome to <strong>Flat Aperture</strong>, a world where Aperture Science
+        continues its relentless pursuit of testing, but in a dimension with only height and width.
+      </p>
+
+      <h1>The Origin of Flat Aperture</h1>
+      <p>
+        Before his untimely demise due to moon-rock poisoning, Cave Johnson's ambitious pursuit of science led him to explore
+        the concept of the multiverse—parallel universes where reality itself could be bent, stretched, or even flattened.
+        His experiments in multiverse theory eventually led to the creation of Project Flat Aperture, a bold endeavor to
+        reach and observe a two-dimensional universe.
+      </p>
+      <p>
+        This was not just any universe; it was a world where the once three-dimensional Aperture Science facilities had been
+        reduced to a flat plane. The facility, the portals, the test chambers—everything operated on a single 2D surface,
+        fundamentally changing the rules of spatial manipulation.
+      </p>
+
+      <h1>Aperture Science in 2D</h1>
+      <p>
+        In this flat universe, Aperture Science faced unique challenges and opportunities. Without depth, the concept of a
+        portal took on new meanings. Instead of portals connecting three-dimensional spaces, they now served as gateways
+        through the flat plane, bending the 2D environment in unexpected ways.
+      </p>
+      <p>
+        The testing chambers in Flat Aperture are designed to exploit this new dimension, with puzzles that challenge the
+        player's understanding of space and movement. Gravity, inertia, and momentum all behave differently when confined to
+        two dimensions, leading to innovative and mind-bending puzzles.
+      </p>
       <!--  -->
     </div>
     <div id="content_footer"></div>
