--- a/leaderboards.html
+++ b/leaderboards.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Leaderboards - Portal 0.5</title>
+    <title>Leaderboards - Flat Aperture</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="keywords"
-      content="portal 0.5, portal 0,5, portal 0.5 official, portal 0,5 official, portal 05, portal 05 official, portal 2D"
-    />
+    <meta name="keywords" content="Flat Aperture, Flat Aperture official, Flat, Aperture, Portal 2D" />
     <link rel="stylesheet" type="text/css" href="styles/template.css" />
   </head>
 
@@ -23,11 +20,7 @@
         <option selected="selected" value="backspacePercent">backspace%</option>
         <option value="glitchless">glitchless</option>
       </select>
-      <select
-        class="select"
-        name="leaderboard-version"
-        id="leaderboard-version"
-      >
+      <select class="select" name="leaderboard-version" id="leaderboard-version">
         <option selected="selected" value="1.0.0">1.0.0</option>
         <option value="1.0.1">1.0.1</option>
       </select>
